禁止工具栏漂浮

--- a/ui/ui_main_window.ui
+++ b/ui/ui_main_window.ui
@@ -130,6 +130,9 @@
    <property name="toolButtonStyle">
     <enum>Qt::ToolButtonTextUnderIcon</enum>
    </property>
+   <property name="floatable">
+    <bool>false</bool>
+   </property>
    <attribute name="toolBarArea">
     <enum>LeftToolBarArea</enum>
    </attribute>
