添加详细信息弹窗

--- a/ui/ui_main_window.ui
+++ b/ui/ui_main_window.ui
@@ -111,7 +111,7 @@
        </layout>
       </item>
       <item>
-       <widget class="QListView" name="main_view"/>
+       <widget class="QListWidget" name="main_view"/>
       </item>
      </layout>
     </item>
