--- a/resources.qrc
+++ b/resources.qrc
@@ -1,5 +1,10 @@
 <RCC>
   <qresource prefix="/">
+    <file>resources/icon/window_top.svg</file>
+    <file>resources/icon/window_top_active.svg</file>
+    <file>resources/icon/move_down.svg</file>
+    <file>resources/icon/move_top.svg</file>
+    <file>resources/icon/move_up.svg</file>
     <file>resources/icon/filter.svg</file>
     <file>resources/icon/setting.svg</file>
     <file>resources/icon/delete.svg</file>
