--- a/ui/ui_setting_dialog.ui
+++ b/ui/ui_setting_dialog.ui
@@ -37,7 +37,7 @@
      <property name="movable">
       <bool>true</bool>
      </property>
-     <widget class="QWidget" name="tab">
+     <widget class="QWidget" name="warehouse_tab">
       <attribute name="icon">
        <iconset>
         <normalon>:/resources/icon/warehouse.svg</normalon>
@@ -56,19 +56,6 @@
           <enum>QFrame::Raised</enum>
          </property>
          <layout class="QGridLayout" name="gridLayout_2">
-          <item row="2" column="0">
-           <spacer name="verticalSpacer">
-            <property name="orientation">
-             <enum>Qt::Vertical</enum>
-            </property>
-            <property name="sizeHint" stdset="0">
-             <size>
-              <width>20</width>
-              <height>40</height>
-             </size>
-            </property>
-           </spacer>
-          </item>
           <item row="1" column="0">
            <layout class="QHBoxLayout" name="horizontalLayout">
             <item>
@@ -132,6 +119,13 @@
                <widget class="QLabel" name="label_5">
                 <property name="text">
                  <string>文件命名规则</string>
+                </property>
+               </widget>
+              </item>
+              <item>
+               <widget class="QLabel" name="label_11">
+                <property name="text">
+                 <string>最大标签数量</string>
                 </property>
                </widget>
               </item>
@@ -213,6 +207,28 @@
                 </property>
                </widget>
               </item>
+              <item>
+               <widget class="QSpinBox" name="max_tags">
+                <property name="sizePolicy">
+                 <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+                  <horstretch>0</horstretch>
+                  <verstretch>0</verstretch>
+                 </sizepolicy>
+                </property>
+                <property name="minimumSize">
+                 <size>
+                  <width>100</width>
+                  <height>0</height>
+                 </size>
+                </property>
+                <property name="maximumSize">
+                 <size>
+                  <width>100</width>
+                  <height>16777215</height>
+                 </size>
+                </property>
+               </widget>
+              </item>
              </layout>
             </item>
             <item>
@@ -252,6 +268,13 @@
                 </property>
                </widget>
               </item>
+              <item>
+               <widget class="QLabel" name="label_12">
+                <property name="text">
+                 <string>不建议设置超过5的值，可能导致显示困难</string>
+                </property>
+               </widget>
+              </item>
              </layout>
             </item>
             <item>
@@ -269,6 +292,19 @@
             </item>
            </layout>
           </item>
+          <item row="4" column="0">
+           <spacer name="verticalSpacer">
+            <property name="orientation">
+             <enum>Qt::Vertical</enum>
+            </property>
+            <property name="sizeHint" stdset="0">
+             <size>
+              <width>20</width>
+              <height>40</height>
+             </size>
+            </property>
+           </spacer>
+          </item>
          </layout>
         </widget>
        </item>
@@ -276,7 +312,7 @@
      </widget>
      <widget class="QWidget" name="tab_2">
       <attribute name="title">
-       <string>显示设置</string>
+       <string>程序设置</string>
       </attribute>
      </widget>
     </widget>
